Fixed header profile image being too large

--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,8 @@ nav {
 }
 
 .header-feature img {
+    width: 120px;
+    height: 120px;
     border-radius: 60px;
     box-shadow: 0px 0px 10px #000;
 }
